# robomaster-2023-cv

./: .gitmodules  install.sh  polystar.py  polystar.service  polystar.sh  polystar_recorder.service  record.sh
detection/: README.md
detection/data/: dji.names
detection/data_processing/: image_zooming.py  label_processing.py
detection/dataset/robomaster_Central China Regional Competition/: robomaster_Central China Regional Competition.txt
detection/dataset/robomaster_Central China Regional Competition/image_annotation/: AllianceVsArtisans_BO2_2_1_0.xml  AllianceVsArtisans_BO2_2_1_2.xml  AllianceVsArtisans_BO2_2_1_3.xml  AllianceVsArtisans_BO2_2_1_4.xml
detection/dataset/robomaster_Central China Regional Competition/labels/: AllianceVsArtisans_BO2_2_1.txt  AllianceVsArtisans_BO2_2_1_3.txt  AllianceVsArtisans_BO2_2_1_4.txt
doc/: serial.md
ros_ws/: polystar.py  robomaster.launch  video_recorder.launch
ros_ws/data/: deepstream-infer.txt  param-camera.yaml  param-decision.yaml  param-localization.yaml
ros_ws/data/models/: icra.xml  icra.yaml  std.xml  std.yaml
ros_ws/launch/: serial-test.launch  serial_only.launch
ros_ws/src/: CMakeLists.txt
ros_ws/src/decision/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
ros_ws/src/decision/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ros_ws/src/decision/catkin_generated/installspace/: decision.pc  decisionConfig.cmake
ros_ws/src/decision/cfg/: decision.cfg
ros_ws/src/decision/launch/: simple_decision.launch  weighted_tracker.launch
ros_ws/src/decision/scripts/: control.py  robot_control.py  shooting.py
ros_ws/src/decision/src/: publisher.cpp  simple_tracker.cpp  thomas_tracker.cpp  weighted_tracker.cpp
ros_ws/src/detection/include/: deepstream_detector.hpp
ros_ws/src/detection/launch/: detection.launch
ros_ws/src/detection/src/: deepstream_detector.cpp
ros_ws/src/detection/src/deepstream-app/: deepstream_app.c
ros_ws/src/locate/: CMakeLists.txt  package.xml
ros_ws/src/locate/include/: imu.hpp  odom.hpp  turret.hpp
ros_ws/src/locate/launch/: locate.launch
ros_ws/src/locate/src/: imu.cpp  locate.cpp  odom.cpp  turret.cpp
ros_ws/src/serial/: CMakeLists.txt  package.xml
ros_ws/src/serial/include/: legacy_protocol.hpp  legacy_serial_spinner.hpp  protocol.hpp  serial_spinner.hpp
ros_ws/src/serial/msg/: GameStage.msg  GameStatus.msg  Movement.msg  PositionFeedback.msg  Shoot.msg  Target.msg  TurretFeedback.msg
ros_ws/src/serial/src/: legacy_serial_spinner.cpp  serial_interface.cpp  serial_spinner.cpp
ros_ws/src/serial/test/: deserialize.cpp  serialize.cpp
ros_ws/src/testing/: package.xml
ros_ws/src/testing/launch/: static_turret.launch
ros_ws/src/testing/scripts/: odom.py  one_box.py  teleop.py
ros_ws/src/testing/src/: serial_testing.cpp
ros_ws/src/tracking/scripts/: track.py
