<?xml version="1.0"?>
<package format="2">
  <name>locate</name>
  <version>0.0.0</version>
  <description>Transform serial messages to ROS standard messages</description>

  <maintainer email="sebastien@todo.todo">sebastien</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

</package>
